--- a/css/utilities.css
+++ b/css/utilities.css
@@ -12,7 +12,7 @@
   display: inline-block;
   padding: 10px 30px;
   color: #fff;
-  /* background-color: #28a745; */
+  background-color: #28a745;
   border: none;
   border-radius: 5px;
 }
@@ -58,6 +58,11 @@
 
 
 /* Flex Columns */
+
+
+.flex-columns.flex-reverse .row {
+  flex-direction: row-reverse;
+}
 .flex-columns .row {
   display: flex;
   flex-direction: row;
@@ -103,6 +108,43 @@
 .flex-columns p {
   margin: 20px 0;
 }
+
+/* Section header */
+.section-header {
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.section-header h2 {
+  font-size: 40px;
+  margin: 20px 0;
+}
+
+.section-padding {
+  padding: 20px 20px 40px;
+
+}
+
+/* Flex Grid */
+.flex-grid .row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+.flex-grid .column {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+
+
+}
+
+
 
 
 
